@@ -3,3 +3,4 @@ requiresAuth    = false
 
 [AdminFaqMgr]
 requiresAuth    = true
+adminGuiAllowed = true
