@@ -1,0 +1,67 @@
+<div id="manager-actions">
+    <span>{translate(#Action#)}: &nbsp;</span>
+    <a class="action add" href="{makeUrl(#add#,#adminfaq#,#faq#)}">{translate(#new faq#)}</a>
+    <a class="action reorder" href="{makeUrl(#reorder#,#adminfaq#,#faq#)}">{translate(#reorder#)}</a>
+</div>
+<div id="content">
+    <div id="content-header">
+        <h2>{translate(pageTitle)}</h2>
+        <div class="message">{msgGet()}</div>
+    </div>
+    <div class="fieldsetlike" id="moduleList">
+      <h3>{translate(#Faq list#)}</h3>
+      <form name="frmFaqMgr" method="post" flexy:ignore id="frmFaqMgr">
+      <input type="hidden" name="action" value="delete" />
+        <table class="full">
+            <thead>
+                <tr class="infos">
+                    <td class="right" colspan="5">
+                    {if:pager}<flexy:include src="admin_pager_table.html" />{end:}
+                    </td>
+                </tr>
+                <tr>
+                   <th width="3%">
+                        <span class="tipOwner">
+                            <span class="tipText" id="becareful">Be Careful !</span>
+                            <input type="checkbox" name="checkAll" id="checkAll" onClick="javascript:applyToAllCheckboxes('frmFaqMgr', 'frmDelete[]', this.checked)" />
+                        </span>
+                    </th>
+                    <th>{translate(#ID#)}</th>
+                    <th class="left">{translate(#FAQ#)}</th>
+                    <th class="left">{translate(#Date created#)}</th>
+                    <th class="left">{translate(#Order#)}</th>
+                </tr>
+            </thead>
+            {if:aPagedData[data]}
+            <tfoot>
+                <tr class="infos">
+                    <td class="right" colspan="5">
+                    {if:pager}<flexy:include src="admin_pager_table.html" />{end:}
+                    </td>
+                </tr>
+            </tfoot>
+            {end:}
+        <tbody>
+
+            {if:aPagedData[data]}
+                <tr class="{switchRowClass()}" flexy:foreach="aPagedData[data],key,aValue">
+                    <td><input type="checkbox" name="frmDelete[]" id="frmDelete[]" value="{aValue[faq_id]}" /></td>
+                    <td>{aValue[faq_id]}</td>
+                    <td class="left desc">
+                        <a href="{makeUrl(#edit#,#adminfaq#,##,aPagedData[data],#frmFaqId|faq_id#,key)}">{aValue[question]}</a>
+                    </td>
+                    <td class="left">{formatDate(aValue[date_created])}</td>
+                    <td>{aValue[item_order]}</td>
+                </tr>
+            {else:}
+                <tr>
+                    <td colspan="5">{translate(#no results found#)}</td>
+                </tr>
+            {end:}
+            </tbody>
+        </table>
+        <input type="submit" class="sgl-button" name="Delete" value="{translate(#delete selected#)}" onclick="return confirmSubmit('faq', 'frmFaqMgr')" />
+      </form>
+    </div>
+    <div class="spacer"></div>
+</div>
